--- a/README.org
+++ b/README.org
@@ -2111,19 +2111,46 @@ Powershell
 #+end_src
 * Examples
 ** Installing a package
-With orgstrap in melpa I'm going to rule that, while a fun idea, the though
-of using the orgstrap block for this file to stick the machinery in a users
-init.el somehow is not the best approach (to say the least) to providing the
-functionality contained in this file. The best approach is to include the
-following in your orgstrap block so that it is clear what the user is in for.
-I'm not entirely sure how to make it possible to make handling optional
-dependencies possible ... probably using a =:var= header option that doesn't
-get hashed?
+With orgstrap in melpa I'm going to rule that, while a fun idea, the
+though of using the orgstrap block for this file to stick the
+machinery in a users init.el somehow is not the best approach (to say
+the least) to providing the functionality contained in this file. The
+best approach is to include the following in your orgstrap block so
+that it is clear what the user is in for.  I'm not entirely sure how
+to make it possible to make handling optional dependencies possible
+... probably using a =:var= header option that doesn't get hashed?
+
+Installing missing packages dynamically is tricky. There is no good
+way to do it that works on every system. Having a dedicated macro that
+takes as arguments the names of the required packages and the required
+package archives seems like it would be the best way to isolate the
+dependencies in a single place so that users of alternative packaging
+systems could install them manually.  It also seems like implementing
+detection and support for additional package managers would be easier
+this way. Unfortunately this seems somewhat misguided.
+
+Package managers exist on a different time scale and in a different
+space than orgstrap. Leveraging package managers to do the right thing
+from orgstrap is desireable, but sometimes you just want to be able to
+reuse some bootstrapping code between files. In which case you aren't
+going to publish it to an elpa, you are likely going to use
+~url-handler-mode~ to open the elisp file in a buffer, make sure the
+checksum matches, and then eval it --- without using ~securl~ which is
+a much heavier solution for asset retrieval.
+
+#+begin_src elisp
+#+end_src
 
 #+name: install-orgstrap
 #+begin_src elisp
 ;; install `orgstrap'
 (add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
+
+;; so this section is a bit trickier than 
+(defmacro orgstrap-package (name)
+  ()
+)
+
 (if (fboundp #'use-package)
     (use-package orgstrap)
   (package-install 'orgstrap))
@@ -2148,6 +2175,58 @@ the string output of the process.
       (if (not (= 0 return-code))
           (error "code: %s stdout: %S" return-code string)
         string))))
+#+end_src
+*** +reval+ reload
+Remote +eval+ load. Ephemoral code reuse. Somewhere between load
+eval, and securl then load. More auditable and stable curl pipe bash.
+#+begin_src elisp :lexical yes
+;; FIXME TODO dedupe this code
+(defun resum (cypher path-or-url)
+  "Return checksum under CYPHER for PATH-OR-URL."
+  (cl-flet ((do-the-thing
+             ()
+             (let (enable-local-eval)
+               (save-window-excursion
+                 (with-current-buffer (find-file path-or-url)
+                   (intern (secure-hash cypher (buffer-string))))))))
+    (if url-handler-mode
+        (do-the-thing)
+      (unwind-protect
+          (progn
+            (url-handler-mode)
+            (do-the-thing))
+        (url-handler-mode)))))
+
+(defun make-reval (cypher path-or-url)
+  `(reval ,cypher ',(resum cypher path-or-url) ,path-or-url))
+
+(defun reval (cypher checksum path-or-url)
+  "Open PATH-OR-URL, match CHECKSUM under CYPHER, then eval."
+  (cl-flet ((do-the-thing
+             ()
+             (let (enable-local-eval)
+               (save-window-excursion
+                 (with-current-buffer (find-file path-or-url)
+                   (unless (eq major-mode 'emacs-lisp-mode)
+                     (error "Not an emacs lisp file!"))
+                   (let ((buffer-checksum (intern (secure-hash cypher (buffer-string)))))
+                     (if (eq buffer-checksum checksum)
+                         (eval-buffer)
+                       (error "checksum mismatch!"))))))))
+    (if url-handler-mode
+        (do-the-thing)
+      (unwind-protect
+          (progn
+            (url-handler-mode)
+            (do-the-thing))
+        (url-handler-mode)))))
+#+end_src
+
+Testing
+#+begin_src elisp
+(make-reval 'sha256 "https://github.com/tgbugs/orgstrap/blob/417b87304da27397d3ce1b79039119a9337be305/packages.el")
+;; `eval-print-last-sexp'
+(reval sha256 '6c0e1703016725caef7b0b8c25955cebe6ad72624386c2d45752bbf53763bbf0 "https://github.com/tgbugs/orgstrap/blob/417b87304da27397d3ce1b79039119a9337be305/packages.el")
 #+end_src
 *** securl
 An extremely common pattern when bootstrapping is to retrieve files
