add orgstrap-file-blacklist and helpers, version bump

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 61089edb947e0e3a97b891894e2b13f53f5ac062497b827b0d8de2c9debea059; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 628519ac01149ff4cff6932d1b650c227bc5a0994665e17c999198459d463987; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an Org file using file local variables
 #+options: num:nil \n:nil
@@ -11,7 +11,7 @@
 #+HTML: <img src="images/orgstrap-horse.svg" align="right" title="Why a horse? Read the source!">
 # orgstrap
 # Not quite a unicorn.
-# If you wan't to grow up to be a unicorn you're going to have to
+# If you want to grow up to be a unicorn you're going to have to
 # pull yourself up by your own bootstraps!
 
 =orgstrap= is a [[#specification][specification]] and tooling for bootstrapping Org files.
@@ -457,14 +457,14 @@ Normalization functions for orgstrap.el.
 
 #+caption: XXX portability note
 #+begin_quote
-For emacs < 26 (org < 9) either lowercase =#+caption:= must be placed _BEFORE_ =#+name:=
-OR =#+CAPTION:= must be uppercase and can come after =#+name:=,
-otherwise =#+name:= will not be associated with the block.
-What a fun bug.
+For emacs < 26 (org < 9) either lowercase =#+caption:= must be placed
+_BEFORE_ =#+name:=, OR =#+CAPTION:= must be uppercase and can come
+after =#+name:=, otherwise =#+name:= will not be associated with the
+block.  What a fun bug.
 
-Addendum. Apparently in the older version of Org =:noweb= is always yes.
-Therefore if you forget to set =:noweb= on a block, testing against emacs
-24 or 25 will alert you to this.
+Addendum. Apparently in the older version of Org =:noweb= is always
+yes.  As a result, testing against Emacs 24 or 25 will alert you if
+you forget to set =:noweb= on a block.
 #+end_quote
 *** Normalization functions
 :PROPERTIES:
@@ -622,7 +622,7 @@ Here is the prop line from the first line of this file that
 includes the cypher and checksum of the =orgstrap= block.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 61089edb947e0e3a97b891894e2b13f53f5ac062497b827b0d8de2c9debea059; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 628519ac01149ff4cff6932d1b650c227bc5a0994665e17c999198459d463987; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -786,6 +786,32 @@ Defaults to `orgstrap-norm-func--prp-1.1'.")
   :type 'list
   :group 'orgstrap)
 
+(defcustom orgstrap-file-blacklist nil
+  "List of files that should never run orgstrap blocks.
+
+For files on the blacklist `orgstrap-block-checksum' is removed from
+the local variables list so that the checksum will not be added to
+the `safe-local-variable-values' list. If it were added it would then
+be impossible to prevent execution of the source block when `orgstrap-mode'
+is disabled.
+
+This is useful when developing a block that modifies Emacs' configuration.
+NOTE this variable only works if `orgstrap-mode' is enabled."
+  :type 'list
+  :group 'orgstrap)
+
+;; orgstrap blacklist
+
+(defun orgstrap-blacklist-current-file ()
+  "Add the current file to `orgstrap-file-blacklist'."
+  (interactive)
+  (add-to-list 'orgstrap-file-blacklist (buffer-file-name)))
+
+(defun orgstrap-unblacklist-current-file ()
+  "Remove the current file from `orgstrap-file-blacklist'"
+  (interactive)
+  (setq orgstrap-file-blacklist (delete (buffer-file-name) orgstrap-file-blacklist)))
+
 ;; orgstrap revoke
 
 (defun orgstrap-revoke-checksums (&rest checksums)
@@ -830,7 +856,8 @@ Sets further hooks."
     ;; embedded eval local variables and simplifies logic for cases
     ;; where orgstrap should not run (e.g. when populating `org-agenda')
     (advice-add #'hack-local-variables-confirm :around #'orgstrap--hack-lv-confirm)
-    (add-hook 'before-hack-local-variables-hook #'orgstrap--before-hack-lv nil t)))
+    (unless (member (buffer-file-name) orgstrap-file-blacklist)
+      (add-hook 'before-hack-local-variables-hook #'orgstrap--before-hack-lv nil t))))
 
 (defun orgstrap--hack-lv-confirm (command &rest args)
   "Advise `hack-local-variables-confirm' to remove orgstrap eval variables.
@@ -841,7 +868,7 @@ unsafe-vars risky-vars dir-name)."
       ;; emacs 28 doesn't alias the non cl- prefixed form so use unaliased?
       (mapcar (lambda (arg)
                 (if (listp arg)
-                    ;; We must use `cl-delete-if-not' on all-vars,
+                    ;; We must use `cl-delete-if' on all-vars,
                     ;; otherwise the list pointed to by all-vars in
                     ;; the calling scope will remain unmodified and
                     ;; the eval variable will be run without being
@@ -851,7 +878,16 @@ unsafe-vars risky-vars dir-name)."
                     ;; implementation in the calling scope.
                     (cl-delete-if #'orgstrap--match-eval-local-variables arg)
                   arg))
-              args)
+              (if (member (buffer-file-name) orgstrap-file-blacklist)
+                  (mapcar (lambda (arg) ; zap checksums for blacklisted
+                            (if (listp arg)
+                                (cl-delete-if
+                                 (lambda (pair)
+                                   (eq (car pair) 'orgstrap-block-checksum))
+                                 arg)
+                              arg))
+                          args)
+                args))
     ;; After removal we have to recheck to see if unsafe-vars and
     ;; risky-vars are empty so we can skip the confirm dialogue. If we
     ;; do not, then the dialogue breaks the flow.
@@ -1427,7 +1463,7 @@ minimal as possible is critical.
 ;; Author: Tom Gillespie
 ;; URL: https://github.com/tgbugs/orgstrap
 ;; Keywords: lisp org org-mode bootstrap
-;; Version: 1.2.2
+;; Version: 1.2.3
 ;; Package-Requires: ((emacs "24.4"))
 
 ;;;; License and Commentary
@@ -1552,9 +1588,8 @@ ac1c7f4aa98c75911b82af8e2e21003d0669571795188810fefa6dfe30405b4c))" \
 done
 done
 #+end_src
-**** Full matrix
+**** TODO Full matrix
 #+begin_src elisp
-;; TODO
 ;; create buffer
 ;; fill buffer
 ;; set code
@@ -1584,6 +1619,10 @@ done
   "The dimensions of the test files that need to be generated."
   )
 #+end_src
+**** TODO One time tests
+1. Blacklist and open, then unblacklist and open.
+   This requires an actual file since we need buffer file name.
+2. Need a way to test revoke as well.
 **** Test files
 # TODO automatically generate all of these test files
 # maybe even generate them as buffers that can be run
@@ -1650,6 +1689,11 @@ done
 :PROPERTIES:
 :CUSTOM_ID: changelog
 :END:
+
+** 1.2.3
+- Add ~orgstrap-file-blacklist~ to block eval of specific files.
+
+  The functionality only works if ~orgstrap-mode~ is enabled.
 ** 1.2.2
 - Do not run eval local variables when loading org-agenda.
 
