further notes on the problem of package manager diversity
I have a feeling that this is an example of a kind of universal
problem that will appear over and over in different contexts. There
are an enormous diversity of ways of getting from point a to point b,
given nothing more than a name as a starting point e.g. orgstrap, and
a simple test e.g. (require 'orgstrap) does not error, as an ending
point. It is trivial to specify the critiera for success, however
implementing the path in a way that works across multiple environments
seems like a step that very often can only be implemented after the
runtime environment is known. For example, imagine that you try to use
an orgstrap file 10 years in the future. Does melpa exist? Who knows!?
You might have to go hunt down a copy of the library that was printed
out before the great disaster and type it in manually, who knows.
This seems quite similar to the issue of containerized reproducibility
vs maximum portability. I think the right solution is going to be to
create a command like orgstrap-projectize or orgstrap-materialize that
will take an orgstrap specification and use it to build a guranteed
reproductible version with everything that it needs bound together.

--- a/README.org
+++ b/README.org
@@ -2182,15 +2182,35 @@ going to publish it to an elpa, you are likely going to use
 checksum matches, and then eval it --- without using ~securl~ which is
 a much heavier solution for asset retrieval.
 
-#+begin_src elisp
-#+end_src
+Given that I am aware of nearly a dozen ways to install and manage
+elisp packages, and this means that I'm only going to support
+packages.el (and possibly use-package) and will make sure that users
+can modify/disable package installation if they are using a different
+package manager. In theory we should also be able to detect the use of
+alternate package managers or use of a starter kit so that we can prompt
+those users that package-install will run if require fails. Maybe there
+is a way to create a recipe generator that will work for all of these.
+Without something that can interpolate between all of these, the burden
+on the developer is too large to be practical.
+
+1. manual
+2. packages.el
+3. use-package
+4. straight
+5. borg
+6. el-get
+7. quelpa
+8. cask
+9. ebuild
+10. nix
+11. guix
 
 #+name: install-orgstrap
 #+begin_src elisp
 ;; install `orgstrap'
 (add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
 
-;; so this section is a bit trickier than 
+;; so this section is a bit trickier than anticipanted ...
 (defmacro orgstrap-package (name)
   ()
 )
